[package]
name = "storage_event_monitor"
version = "0.1.0"
authors = ["Tony Asleson <tasleson@redhat.com>"]

[dependencies]
sdjournal = { git = "https://github.com/tasleson/sdjournal" }
# sdjournal = { path = "/home/tasleson/projects/ffi/sdjournal" }
libc = "0.2.28"
regex = "0.2"
lazy_static = "0.2.8"
libudev = "0.2"